chusco.bison/chusco.output
Nonterminals useless in grammar

    clausulas_excepcion_especifica_rep
    clausulas_excepcion
    clausula_excepcion_especifica
    clausula_excepcion_general
    enumeraciones
    expresion_condicional
    clave_valor


Terminals unused in grammar

    BOOLEANO
    CARACTER
    COMO
    CONSTANTE
    CORTO
    DE
    DESCENDENTE
    DEVOLVER
    DICCIONARIO
    EN
    ENTERO
    ENUMERACION
    EXCEPCION
    EXPORTAR
    FINALMENTE
    IMPORTAR
    LARGO
    LANZA
    LIBRERIA
    LISTA
    MIENTRAS
    OBJETO
    PARA
    PRINCIPIO
    PROGRAMA
    PRUEBA
    RANGO
    REAL
    REFERENCIA
    REGISTRO
    REPETIR
    SALIR
    SIGNO
    SIGUIENTE
    SUBPROGRAMA
    TABLA
    TIPO
    VALOR
    DOS_PUNTOS
    CUATRO_PUNTOS
    ASIGNACION
    FLECHA
    INC
    DEC
    DESPI
    DESPD
    LEQ
    GEQ
    NEQ
    AND
    OR
    ASIG_SUMA
    ASIG_RESTA
    ASIG_MULT
    ASIG_DIV
    ASIG_RESTO
    ASIG_POT
    ASIG_DESPI
    ASIG_DESPD
    "excepcion"
    "entonces"
    "sino"


Rules useless in grammar

  236 clausulas: clausulas_excepcion clausula_finalmente
  237          | clausulas_excepcion

  238 clausulas_excepcion_especifica_rep: clausulas_excepcion_especifica_rep clausula_excepcion_especifica

  239 clausulas_excepcion: clausulas_excepcion_especifica_rep clausula_excepcion_general

  240 clausula_excepcion_especifica: "excepcion" "(" nombre ")" instruccion_rep

  241 clausula_excepcion_general: "excepcion" instruccion_rep

  242 enumeraciones: '[' expresion_condicional clausula_iteracion ']'
  243              | '[' expresion ']'
  244              | '{' clave_valor '}'
  245              | '{' campo_valor '}'

  246 expresion_condicional: expresion
  247                      | "si" expresion "entonces" expresion "sino" expresion
  248                      | "si" expresion "entonces" expresion

  249 clave_valor: CTC_CADENA "=>" expresion


State 34 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 219 conflicts: 1 shift/reduce
State 220 conflicts: 1 shift/reduce
State 231 conflicts: 1 shift/reduce
State 290 conflicts: 42 reduce/reduce
State 295 conflicts: 1 shift/reduce
State 296 conflicts: 1 shift/reduce
State 304 conflicts: 1 shift/reduce
State 307 conflicts: 1 shift/reduce
State 352 conflicts: 42 reduce/reduce
State 353 conflicts: 42 reduce/reduce
State 356 conflicts: 1 shift/reduce
State 388 conflicts: 1 shift/reduce
State 392 conflicts: 1 shift/reduce
State 408 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: definicion_programa
    2         | definicion_libreria

    3 definicion_programa: ε
    4                    | "programa" IDENTIFICADOR ';' codigo_programa

    5 codigo_programa: codigo_programa_ast cuerpo_subprograma
    6                | ε

    7 codigo_programa_ast: codigo_programa_ast libreria
    8                    | ε

    9 libreria: "importar" "libreria" nombre ';'
   10         | "importar" "libreria" nombre "como" IDENTIFICADOR ";"
   11         | "de" "libreria" nombre "importar" libreria_rep_comas ";"

   12 libreria_rep_comas: libreria_rep_comas ',' IDENTIFICADOR
   13                   | IDENTIFICADOR

   14 nombre: nombre_ast IDENTIFICADOR

   15 nombre_ast: nombre_ast IDENTIFICADOR "::"
   16           | ε

   17 definicion_libreria: "libreria" IDENTIFICADOR ';' codigo_libreria

   18 codigo_libreria: codigo_libreria_ast codigo_libreria_rep
   19                | codigo_libreria_ast exportaciones codigo_libreria_rep

   20 codigo_libreria_ast: codigo_libreria_ast libreria
   21                    | ε

   22 codigo_libreria_rep: codigo_libreria_rep declaracion
   23                    | declaracion

   24 exportaciones: "exportar" exportaciones_rep_comas ';'

   25 exportaciones_rep_comas: exportaciones_rep_comas ',' nombre
   26                        | nombre

   27 declaracion: declaracion_objeto
   28            | declaracion_tipo
   29            | declaracion_subprograma

   30 declaracion_objeto: declaracion_objeto_rep_comas ':' "constante" especificacion_tipo ":=" expresion ';'
   31                   | declaracion_objeto_rep_comas ':' especificacion_tipo ';'
   32                   | declaracion_objeto_rep_comas ':' especificacion_tipo ":=" expresion ';'

   33 declaracion_objeto_rep_comas: declaracion_objeto_rep_comas ',' IDENTIFICADOR
   34                             | IDENTIFICADOR

   35 especificacion_tipo: nombre
   36                    | tipo_no_estructurado

   37 declaracion_tipo: "tipo" IDENTIFICADOR "es" tipo_no_estructurado ';'
   38                 | "tipo" IDENTIFICADOR "es" tipo_estructurado

   39 tipo_no_estructurado: tipo_escalar
   40                     | tipo_tabla
   41                     | tipo_diccionario

   42 tipo_escalar: "signo" tipo_basico longitud "rango" rango
   43             | tipo_basico longitud "rango" rango
   44             | "signo" tipo_basico "rango" rango
   45             | "signo" tipo_basico longitud
   46             | tipo_basico

   47 longitud: "corto"
   48         | "largo"

   49 tipo_basico: "booleano"
   50            | "caracter"
   51            | "entero"
   52            | "real"

   53 rango: expresion ".." expresion ".." expresion
   54      | expresion ".." expresion

   55 tipo_tabla: "tabla" '(' expresion ".." expresion ")" "de" especificacion_tipo
   56           | "lista" "de" especificacion_tipo

   57 tipo_diccionario: "diccionario" "de" especificacion_tipo

   58 tipo_registro: "registro" campo_rep "fin" "registro"

   59 campo_rep: campo_rep campo
   60          | campo

   61 campo: identificador_rep ':' especificacion_tipo ":=" expresion ';'
   62      | identificador_rep ':' especificacion_tipo ';'

   63 identificador_rep: identificador_rep IDENTIFICADOR
   64                  | IDENTIFICADOR

   65 tipo_estructurado: tipo_registro
   66                  | tipo_enumerado
   67                  | clase

   68 tipo_enumerado: "enumeracion" "de" tipo_escalar elemento_enumeracion_rep "fin" "enumeracion"
   69               | "enumeracion" elemento_enumeracion_rep "fin" "enumeracion"

   70 elemento_enumeracion_rep: elemento_enumeracion_rep elemento_enumeracion
   71                         | elemento_enumeracion

   72 elemento_enumeracion: IDENTIFICADOR ":=" expresion
   73                     | IDENTIFICADOR

   74 clase: CLASE ULTIMA superclases declaracion_componente_rep FIN CLASE
   75      | CLASE superclases declaracion_componente_rep FIN CLASE
   76      | CLASE ULTIMA declaracion_componente_rep FIN CLASE
   77      | CLASE declaracion_componente_rep FIN CLASE

   78 declaracion_componente_rep: declaracion_componente_rep declaracion_componente
   79                           | declaracion_componente

   80 superclases: '(' nombre_rep ')'

   81 nombre_rep: nombre_rep nombre
   82           | nombre

   83 declaracion_componente: visibilidad componente
   84                       | componente

   85 visibilidad: PUBLICO
   86            | PROTEGIDO
   87            | PRIVADO

   88 componente: declaracion_tipo
   89           | declaracion_objeto
   90           | modificador_asterisco declaracion_subprograma

   91 modificador_asterisco: modificador_asterisco modificador
   92                      | ε

   93 modificador: CONSTRUCTOR
   94            | DESTRUCTOR
   95            | GENERICO
   96            | ABSTRACTO
   97            | ESPECIFICO
   98            | FINAL

   99 declaracion_subprograma: "subprograma" cabecera_subprograma cuerpo_subprograma "subprograma"

  100 cabecera_subprograma: IDENTIFICADOR parametrizacion tipo_resultado
  101                     | IDENTIFICADOR tipo_resultado
  102                     | IDENTIFICADOR parametrizacion
  103                     | IDENTIFICADOR

  104 parametrizacion: "(" parametrizacion_rep_ast declaracion_parametros ")"

  105 parametrizacion_rep_ast: parametrizacion_rep_ast declaracion_parametros ";"
  106                        | ε

  107 declaracion_parametros: declaracion_parametros_rep_comas ":" modo especificacion_tipo ":=" expresion
  108                       | declaracion_parametros_rep_comas ":" especificacion_tipo ":=" expresion
  109                       | declaracion_parametros_rep_comas ":" modo especificacion_tipo
  110                       | declaracion_parametros_rep_comas ":" especificacion_tipo

  111 declaracion_parametros_rep_comas: declaracion_parametros_rep_comas ',' IDENTIFICADOR
  112                                 | IDENTIFICADOR

  113 modo: "valor"
  114     | "referencia"

  115 tipo_resultado: "devolver" especificacion_tipo

  116 cuerpo_subprograma: cuerpo_subprograma_ast "principio" instruccion_rep "fin"

  117 cuerpo_subprograma_ast: cuerpo_subprograma_ast declaracion
  118                       | ε

  119 instruccion: instruccion_asignacion
  120            | instruccion_devolver
  121            | instruccion_llamada
  122            | instruccion_si
  123            | instruccion_casos
  124            | instruccion_bucle
  125            | instruccion_interrupcion
  126            | instruccion_lanzamiento_excepcion
  127            | instruccion_captura_excepcion
  128            | ";"

  129 instruccion_asignacion: objeto op_asignacion expresion ";"

  130 op_asignacion: ":="
  131              | ":+"
  132              | ":-"
  133              | ":*"
  134              | ":/"
  135              | ":\\"
  136              | ":^"
  137              | ":<"
  138              | ":>"

  139 instruccion_devolver: "devolver" ";"
  140                     | "devolver" expresion ";"

  141 instruccion_llamada: llamada_subprograma ";"

  142 llamada_subprograma: nombre '(' mi_llamada_subprograma ')'
  143                    | nombre '(' ')'

  144 mi_llamada_subprograma: mi_llamada_subprograma ',' definicion_parametro
  145                       | definicion_parametro

  146 definicion_parametro: expresion
  147                     | IDENTIFICADOR ":=" expresion

  148 instruccion_rep: instruccion_rep instruccion
  149                | instruccion

  150 instruccion_si: SI expresion ENTONCES instruccion_rep SINO instruccion_rep "fin" "si"
  151               | SI expresion ENTONCES instruccion_rep SINO FIN SI

  152 caso_rep: caso_rep caso
  153         | caso

  154 instruccion_casos: CASOS expresion ES caso_rep FIN CASOS

  155 caso: CUANDO entradas "=>" instruccion_rep

  156 entrada_rep: entrada_rep entrada ":"
  157            | ε

  158 entradas: entrada_rep entrada

  159 entrada: expresion ".." expresion
  160        | expresion
  161        | OTRO

  162 instruccion_bucle: IDENTIFICADOR ":" clausula_iteracion instruccion_rep FIN BUCLE
  163                  | clausula_iteracion instruccion_rep FIN BUCLE

  164 clausula_iteracion: "para" IDENTIFICADOR ":" especificacion_tipo "en" expresion
  165                   | "para" IDENTIFICADOR "en" expresion
  166                   | "repetir" IDENTIFICADOR ":" especificacion_tipo "en" rango "descendente"
  167                   | "repetir" IDENTIFICADOR "en" rango
  168                   | "repetir" IDENTIFICADOR ":" especificacion_tipo "en" rango
  169                   | "repetir" IDENTIFICADOR "en" rango "descendente"
  170                   | "mientras" expresion

  171 instruccion_interrupcion: "siguiente" cuando ";"
  172                         | "siguiente" ";"
  173                         | "salir" "de" IDENTIFICADOR cuando ";"
  174                         | "salir" ";"
  175                         | "salir" "de" IDENTIFICADOR ";"
  176                         | "salir" cuando ";"

  177 cuando: "cuando" expresion

  178 instruccion_lanzamiento_excepcion: "lanza" nombre ";"

  179 instruccion_captura_excepcion: "prueba" instruccion_rep clausulas "fin" "prueba"

  180 clausulas: clausula_finalmente

  181 clausula_finalmente: "finalmente" instruccion_rep

  182 expresion: expresion_or

  183 expresion_or: expresion_or "\\/" expresion_and
  184             | expresion_and

  185 expresion_and: expresion_and "/\\" expresion_neg
  186              | expresion_neg

  187 expresion_neg: '~' expresion_comparacion
  188              | expresion_comparacion

  189 expresion_comparacion: operador_comparacion expresion_desp
  190                      | expresion_desp

  191 operador_comparacion: '<'
  192                     | '>'
  193                     | "<="
  194                     | ">="
  195                     | '='
  196                     | "~="

  197 expresion_desp: expresion_desp operador_desp expresion_add
  198               | expresion_add

  199 operador_desp: "<-"
  200              | "->"

  201 expresion_add: expresion_add operador_add expresion_mult_div
  202              | expresion_mult_div

  203 operador_add: '+'
  204             | '-'

  205 expresion_mult_div: expresion_mult_div operador_mult_div expresion_potencia
  206                   | expresion_potencia

  207 operador_mult_div: '*'
  208                  | '/'
  209                  | '\\'

  210 expresion_potencia: expresion_posfija '^' expresion_potencia
  211                   | expresion_posfija

  212 expresion_posfija: expresion_unaria operador_posfijo
  213                  | expresion_unaria

  214 operador_posfijo: "++"
  215                 | "--"

  216 expresion_unaria: '-' primario
  217                 | primario

  218 primario: literal
  219         | objeto
  220         | objeto '.' IDENTIFICADOR
  221         | objeto '[' expresion ']'
  222         | objeto '{' CTC_CADENA '}'
  223         | objeto '{' campo_valor '}'
  224         | '(' expresion ')'

  225 literal: VERDADERO
  226        | FALSO
  227        | CTC_ENTERA
  228        | CTC_REAL
  229        | CTC_CARACTER
  230        | CTC_CADENA

  231 objeto: nombre
  232       | objeto '.' IDENTIFICADOR
  233       | objeto '[' expresion ']'
  234       | objeto '{' CTC_CADENA '}'

  235 campo_valor: IDENTIFICADOR "=>" expresion


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 55 80 142 143 224
    ')' (41) 80 142 143 224
    '*' (42) 207
    '+' (43) 203
    ',' (44) 12 25 33 111 144
    '-' (45) 204 216
    '.' (46) 220 232
    '/' (47) 208
    ':' (58) 30 31 32 61 62
    ';' (59) 4 9 17 24 30 31 32 37 61 62
    '<' (60) 191
    '=' (61) 195
    '>' (62) 192
    '[' (91) 221 233
    '\\' (92) 209
    ']' (93) 221 233
    '^' (94) 210
    '{' (123) 222 223 234
    '}' (125) 222 223 234
    '~' (126) 187
    error (256)
    ABSTRACTO (258) 96
    BOOLEANO (259)
    BUCLE (260) 162 163
    CARACTER (261)
    CASOS (262) 154
    CLASE (263) 74 75 76 77
    COMO (264)
    CONSTANTE (265)
    CONSTRUCTOR (266) 93
    CORTO (267)
    CUANDO (268) 155
    DE (269)
    DESCENDENTE (270)
    DESTRUCTOR (271) 94
    DEVOLVER (272)
    DICCIONARIO (273)
    EN (274)
    ENTERO (275)
    ENTONCES (276) 150 151
    ENUMERACION (277)
    ES (278) 154
    ESPECIFICO (279) 97
    EXCEPCION (280)
    EXPORTAR (281)
    FALSO (282) 226
    FIN (283) 74 75 76 77 151 154 162 163
    FINAL (284) 98
    FINALMENTE (285)
    GENERICO (286) 95
    IMPORTAR (287)
    LARGO (288)
    LANZA (289)
    LIBRERIA (290)
    LISTA (291)
    MIENTRAS (292)
    OBJETO (293)
    OTRO (294) 161
    PARA (295)
    PRINCIPIO (296)
    PRIVADO (297) 87
    PROGRAMA (298)
    PROTEGIDO (299) 86
    PRUEBA (300)
    PUBLICO (301) 85
    RANGO (302)
    REAL (303)
    REFERENCIA (304)
    REGISTRO (305)
    REPETIR (306)
    SALIR (307)
    SI (308) 150 151
    SIGNO (309)
    SIGUIENTE (310)
    SINO (311) 150 151
    SUBPROGRAMA (312)
    TABLA (313)
    TIPO (314)
    ULTIMA (315) 74 76
    VALOR (316)
    VERDADERO (317) 225
    CTC_CARACTER (318) 229
    CTC_CADENA (319) 222 230 234
    IDENTIFICADOR (320) 4 10 12 13 14 15 17 33 34 37 38 63 64 72 73 100 101 102 103 111 112 147 162 164 165 166 167 168 169 173 175 220 232 235
    CTC_ENTERA (321) 227
    CTC_REAL (322) 228
    DOS_PUNTOS (323)
    CUATRO_PUNTOS (324)
    ASIGNACION (325)
    FLECHA (326)
    INC (327)
    DEC (328)
    DESPI (329)
    DESPD (330)
    LEQ (331)
    GEQ (332)
    NEQ (333)
    AND (334)
    OR (335)
    ASIG_SUMA (336)
    ASIG_RESTA (337)
    ASIG_MULT (338)
    ASIG_DIV (339)
    ASIG_RESTO (340)
    ASIG_POT (341)
    ASIG_DESPI (342)
    ASIG_DESPD (343)
    "programa" (344) 4
    "importar" (345) 9 10 11
    "libreria" (346) 9 10 11 17
    "como" (347) 10
    ";" (348) 10 11 105 128 129 139 140 141 171 172 173 174 175 176 178
    "de" (349) 11 55 56 57 68 173 175
    "::" (350) 15
    "exportar" (351) 24
    "constante" (352) 30
    ":=" (353) 30 32 61 72 107 108 130 147
    "tipo" (354) 37 38
    "es" (355) 37 38
    "signo" (356) 42 44 45
    "rango" (357) 42 43 44
    "corto" (358) 47
    "largo" (359) 48
    "booleano" (360) 49
    "caracter" (361) 50
    "entero" (362) 51
    "real" (363) 52
    ".." (364) 53 54 55 159
    "tabla" (365) 55
    ")" (366) 55 104
    "lista" (367) 56
    "diccionario" (368) 57
    "registro" (369) 58
    "fin" (370) 58 68 69 116 150 179
    "enumeracion" (371) 68 69
    "subprograma" (372) 99
    "(" (373) 104
    ":" (374) 107 108 109 110 156 162 164 166 168
    "valor" (375) 113
    "referencia" (376) 114
    "devolver" (377) 115 139 140
    "principio" (378) 116
    ":+" (379) 131
    ":-" (380) 132
    ":*" (381) 133
    ":/" (382) 134
    ":\\" (383) 135
    ":^" (384) 136
    ":<" (385) 137
    ":>" (386) 138
    "si" (387) 150
    "=>" (388) 155 235
    "para" (389) 164 165
    "en" (390) 164 165 166 167 168 169
    "repetir" (391) 166 167 168 169
    "descendente" (392) 166 169
    "mientras" (393) 170
    "siguiente" (394) 171 172
    "salir" (395) 173 174 175 176
    "cuando" (396) 177
    "lanza" (397) 178
    "prueba" (398) 179
    "excepcion" (399)
    "finalmente" (400) 181
    "\\/" (401) 183
    "/\\" (402) 185
    "<=" (403) 193
    ">=" (404) 194
    "~=" (405) 196
    "<-" (406) 199
    "->" (407) 200
    "++" (408) 214
    "--" (409) 215
    "entonces" (410)
    "sino" (411)


Nonterminals, with rules where they appear

    $accept (177)
        on left: 0
    programa (178)
        on left: 1 2
        on right: 0
    definicion_programa (179)
        on left: 3 4
        on right: 1
    codigo_programa (180)
        on left: 5 6
        on right: 4
    codigo_programa_ast (181)
        on left: 7 8
        on right: 5 7
    libreria (182)
        on left: 9 10 11
        on right: 7 20
    libreria_rep_comas (183)
        on left: 12 13
        on right: 11 12
    nombre (184)
        on left: 14
        on right: 9 10 11 25 26 35 81 82 142 143 178 231
    nombre_ast (185)
        on left: 15 16
        on right: 14 15
    definicion_libreria (186)
        on left: 17
        on right: 2
    codigo_libreria (187)
        on left: 18 19
        on right: 17
    codigo_libreria_ast (188)
        on left: 20 21
        on right: 18 19 20
    codigo_libreria_rep (189)
        on left: 22 23
        on right: 18 19 22
    exportaciones (190)
        on left: 24
        on right: 19
    exportaciones_rep_comas (191)
        on left: 25 26
        on right: 24 25
    declaracion (192)
        on left: 27 28 29
        on right: 22 23 117
    declaracion_objeto (193)
        on left: 30 31 32
        on right: 27 89
    declaracion_objeto_rep_comas (194)
        on left: 33 34
        on right: 30 31 32 33
    especificacion_tipo (195)
        on left: 35 36
        on right: 30 31 32 55 56 57 61 62 107 108 109 110 115 164 166 168
    declaracion_tipo (196)
        on left: 37 38
        on right: 28 88
    tipo_no_estructurado (197)
        on left: 39 40 41
        on right: 36 37
    tipo_escalar (198)
        on left: 42 43 44 45 46
        on right: 39 68
    longitud (199)
        on left: 47 48
        on right: 42 43 45
    tipo_basico (200)
        on left: 49 50 51 52
        on right: 42 43 44 45 46
    rango (201)
        on left: 53 54
        on right: 42 43 44 166 167 168 169
    tipo_tabla (202)
        on left: 55 56
        on right: 40
    tipo_diccionario (203)
        on left: 57
        on right: 41
    tipo_registro (204)
        on left: 58
        on right: 65
    campo_rep (205)
        on left: 59 60
        on right: 58 59
    campo (206)
        on left: 61 62
        on right: 59 60
    identificador_rep (207)
        on left: 63 64
        on right: 61 62 63
    tipo_estructurado (208)
        on left: 65 66 67
        on right: 38
    tipo_enumerado (209)
        on left: 68 69
        on right: 66
    elemento_enumeracion_rep (210)
        on left: 70 71
        on right: 68 69 70
    elemento_enumeracion (211)
        on left: 72 73
        on right: 70 71
    clase (212)
        on left: 74 75 76 77
        on right: 67
    declaracion_componente_rep (213)
        on left: 78 79
        on right: 74 75 76 77 78
    superclases (214)
        on left: 80
        on right: 74 75
    nombre_rep (215)
        on left: 81 82
        on right: 80 81
    declaracion_componente (216)
        on left: 83 84
        on right: 78 79
    visibilidad (217)
        on left: 85 86 87
        on right: 83
    componente (218)
        on left: 88 89 90
        on right: 83 84
    modificador_asterisco (219)
        on left: 91 92
        on right: 90 91
    modificador (220)
        on left: 93 94 95 96 97 98
        on right: 91
    declaracion_subprograma (221)
        on left: 99
        on right: 29 90
    cabecera_subprograma (222)
        on left: 100 101 102 103
        on right: 99
    parametrizacion (223)
        on left: 104
        on right: 100 102
    parametrizacion_rep_ast (224)
        on left: 105 106
        on right: 104 105
    declaracion_parametros (225)
        on left: 107 108 109 110
        on right: 104 105
    declaracion_parametros_rep_comas (226)
        on left: 111 112
        on right: 107 108 109 110 111
    modo (227)
        on left: 113 114
        on right: 107 109
    tipo_resultado (228)
        on left: 115
        on right: 100 101
    cuerpo_subprograma (229)
        on left: 116
        on right: 5 99
    cuerpo_subprograma_ast (230)
        on left: 117 118
        on right: 116 117
    instruccion (231)
        on left: 119 120 121 122 123 124 125 126 127 128
        on right: 148 149
    instruccion_asignacion (232)
        on left: 129
        on right: 119
    op_asignacion (233)
        on left: 130 131 132 133 134 135 136 137 138
        on right: 129
    instruccion_devolver (234)
        on left: 139 140
        on right: 120
    instruccion_llamada (235)
        on left: 141
        on right: 121
    llamada_subprograma (236)
        on left: 142 143
        on right: 141
    mi_llamada_subprograma (237)
        on left: 144 145
        on right: 142 144
    definicion_parametro (238)
        on left: 146 147
        on right: 144 145
    instruccion_rep (239)
        on left: 148 149
        on right: 116 148 150 151 155 162 163 179 181
    instruccion_si (240)
        on left: 150 151
        on right: 122
    caso_rep (241)
        on left: 152 153
        on right: 152 154
    instruccion_casos (242)
        on left: 154
        on right: 123
    caso (243)
        on left: 155
        on right: 152 153
    entrada_rep (244)
        on left: 156 157
        on right: 156 158
    entradas (245)
        on left: 158
        on right: 155
    entrada (246)
        on left: 159 160 161
        on right: 156 158
    instruccion_bucle (247)
        on left: 162 163
        on right: 124
    clausula_iteracion (248)
        on left: 164 165 166 167 168 169 170
        on right: 162 163
    instruccion_interrupcion (249)
        on left: 171 172 173 174 175 176
        on right: 125
    cuando (250)
        on left: 177
        on right: 171 173 176
    instruccion_lanzamiento_excepcion (251)
        on left: 178
        on right: 126
    instruccion_captura_excepcion (252)
        on left: 179
        on right: 127
    clausulas (253)
        on left: 180
        on right: 179
    clausula_finalmente (254)
        on left: 181
        on right: 180
    expresion (255)
        on left: 182
        on right: 30 32 53 54 55 61 72 107 108 129 140 146 147 150 151 154 159 160 164 165 170 177 221 224 233 235
    expresion_or (256)
        on left: 183 184
        on right: 182 183
    expresion_and (257)
        on left: 185 186
        on right: 183 184 185
    expresion_neg (258)
        on left: 187 188
        on right: 185 186
    expresion_comparacion (259)
        on left: 189 190
        on right: 187 188
    operador_comparacion (260)
        on left: 191 192 193 194 195 196
        on right: 189
    expresion_desp (261)
        on left: 197 198
        on right: 189 190 197
    operador_desp (262)
        on left: 199 200
        on right: 197
    expresion_add (263)
        on left: 201 202
        on right: 197 198 201
    operador_add (264)
        on left: 203 204
        on right: 201
    expresion_mult_div (265)
        on left: 205 206
        on right: 201 202 205
    operador_mult_div (266)
        on left: 207 208 209
        on right: 205
    expresion_potencia (267)
        on left: 210 211
        on right: 205 206 210
    expresion_posfija (268)
        on left: 212 213
        on right: 210 211
    operador_posfijo (269)
        on left: 214 215
        on right: 212
    expresion_unaria (270)
        on left: 216 217
        on right: 212 213
    primario (271)
        on left: 218 219 220 221 222 223 224
        on right: 216 217
    literal (272)
        on left: 225 226 227 228 229 230
        on right: 218
    objeto (273)
        on left: 231 232 233 234
        on right: 129 219 220 221 222 223 232 233 234
    campo_valor (274)
        on left: 235
        on right: 223


State 0

    0 $accept: • programa $end

    "programa"  shift, and go to state 1
    "libreria"  shift, and go to state 2

    $default  reduce using rule 3 (definicion_programa)

    programa             go to state 3
    definicion_programa  go to state 4
    definicion_libreria  go to state 5


State 1

    4 definicion_programa: "programa" • IDENTIFICADOR ';' codigo_programa

    IDENTIFICADOR  shift, and go to state 6


State 2

   17 definicion_libreria: "libreria" • IDENTIFICADOR ';' codigo_libreria

    IDENTIFICADOR  shift, and go to state 7


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 8


State 4

    1 programa: definicion_programa •

    $default  reduce using rule 1 (programa)


State 5

    2 programa: definicion_libreria •

    $default  reduce using rule 2 (programa)


State 6

    4 definicion_programa: "programa" IDENTIFICADOR • ';' codigo_programa

    ';'  shift, and go to state 9


State 7

   17 definicion_libreria: "libreria" IDENTIFICADOR • ';' codigo_libreria

    ';'  shift, and go to state 10


State 8

    0 $accept: programa $end •

    $default  accept


State 9

    4 definicion_programa: "programa" IDENTIFICADOR ';' • codigo_programa

    $end      reduce using rule 6 (codigo_programa)
    $default  reduce using rule 8 (codigo_programa_ast)

    codigo_programa      go to state 11
    codigo_programa_ast  go to state 12


State 10

   17 definicion_libreria: "libreria" IDENTIFICADOR ';' • codigo_libreria

    $default  reduce using rule 21 (codigo_libreria_ast)

    codigo_libreria      go to state 13
    codigo_libreria_ast  go to state 14


State 11

    4 definicion_programa: "programa" IDENTIFICADOR ';' codigo_programa •

    $default  reduce using rule 4 (definicion_programa)


State 12

    5 codigo_programa: codigo_programa_ast • cuerpo_subprograma
    7 codigo_programa_ast: codigo_programa_ast • libreria

    "importar"  shift, and go to state 15
    "de"        shift, and go to state 16

    $default  reduce using rule 118 (cuerpo_subprograma_ast)

    libreria                go to state 17
    cuerpo_subprograma      go to state 18
    cuerpo_subprograma_ast  go to state 19


State 13

   17 definicion_libreria: "libreria" IDENTIFICADOR ';' codigo_libreria •

    $default  reduce using rule 17 (definicion_libreria)


State 14

   18 codigo_libreria: codigo_libreria_ast • codigo_libreria_rep
   19                | codigo_libreria_ast • exportaciones codigo_libreria_rep
   20 codigo_libreria_ast: codigo_libreria_ast • libreria

    IDENTIFICADOR  shift, and go to state 20
    "importar"     shift, and go to state 15
    "de"           shift, and go to state 16
    "exportar"     shift, and go to state 21
    "tipo"         shift, and go to state 22
    "subprograma"  shift, and go to state 23

    libreria                      go to state 24
    codigo_libreria_rep           go to state 25
    exportaciones                 go to state 26
    declaracion                   go to state 27
    declaracion_objeto            go to state 28
    declaracion_objeto_rep_comas  go to state 29
    declaracion_tipo              go to state 30
    declaracion_subprograma       go to state 31


State 15

    9 libreria: "importar" • "libreria" nombre ';'
   10         | "importar" • "libreria" nombre "como" IDENTIFICADOR ";"

    "libreria"  shift, and go to state 32


State 16

   11 libreria: "de" • "libreria" nombre "importar" libreria_rep_comas ";"

    "libreria"  shift, and go to state 33


State 17

    7 codigo_programa_ast: codigo_programa_ast libreria •

    $default  reduce using rule 7 (codigo_programa_ast)


State 18

    5 codigo_programa: codigo_programa_ast cuerpo_subprograma •

    $default  reduce using rule 5 (codigo_programa)


State 19

  116 cuerpo_subprograma: cuerpo_subprograma_ast • "principio" instruccion_rep "fin"
  117 cuerpo_subprograma_ast: cuerpo_subprograma_ast • declaracion

    IDENTIFICADOR  shift, and go to state 20
    "tipo"         shift, and go to state 22
    "subprograma"  shift, and go to state 23
    "principio"    shift, and go to state 34

    declaracion                   go to state 35
    declaracion_objeto            go to state 28
    declaracion_objeto_rep_comas  go to state 29
    declaracion_tipo              go to state 30
    declaracion_subprograma       go to state 31


State 20

   34 declaracion_objeto_rep_comas: IDENTIFICADOR •

    $default  reduce using rule 34 (declaracion_objeto_rep_comas)


State 21

   24 exportaciones: "exportar" • exportaciones_rep_comas ';'

    $default  reduce using rule 16 (nombre_ast)

    nombre                   go to state 36
    nombre_ast               go to state 37
    exportaciones_rep_comas  go to state 38


State 22

   37 declaracion_tipo: "tipo" • IDENTIFICADOR "es" tipo_no_estructurado ';'
   38                 | "tipo" • IDENTIFICADOR "es" tipo_estructurado

    IDENTIFICADOR  shift, and go to state 39


State 23

   99 declaracion_subprograma: "subprograma" • cabecera_subprograma cuerpo_subprograma "subprograma"

    IDENTIFICADOR  shift, and go to state 40

    cabecera_subprograma  go to state 41


State 24

   20 codigo_libreria_ast: codigo_libreria_ast libreria •

    $default  reduce using rule 20 (codigo_libreria_ast)


State 25

   18 codigo_libreria: codigo_libreria_ast codigo_libreria_rep •
   22 codigo_libreria_rep: codigo_libreria_rep • declaracion

    IDENTIFICADOR  shift, and go to state 20
    "tipo"         shift, and go to state 22
    "subprograma"  shift, and go to state 23

    $default  reduce using rule 18 (codigo_libreria)

    declaracion                   go to state 42
    declaracion_objeto            go to state 28
    declaracion_objeto_rep_comas  go to state 29
    declaracion_tipo              go to state 30
    declaracion_subprograma       go to state 31


State 26

   19 codigo_libreria: codigo_libreria_ast exportaciones • codigo_libreria_rep

    IDENTIFICADOR  shift, and go to state 20
    "tipo"         shift, and go to state 22
    "subprograma"  shift, and go to state 23

    codigo_libreria_rep           go to state 43
    declaracion                   go to state 27
    declaracion_objeto            go to state 28
    declaracion_objeto_rep_comas  go to state 29
    declaracion_tipo              go to state 30
    declaracion_subprograma       go to state 31


State 27

   23 codigo_libreria_rep: declaracion •

    $default  reduce using rule 23 (codigo_libreria_rep)


State 28

   27 declaracion: declaracion_objeto •

    $default  reduce using rule 27 (declaracion)


State 29

   30 declaracion_objeto: declaracion_objeto_rep_comas • ':' "constante" especificacion_tipo ":=" expresion ';'
   31                   | declaracion_objeto_rep_comas • ':' especificacion_tipo ';'
   32                   | declaracion_objeto_rep_comas • ':' especificacion_tipo ":=" expresion ';'
   33 declaracion_objeto_rep_comas: declaracion_objeto_rep_comas • ',' IDENTIFICADOR

    ','  shift, and go to state 44
    ':'  shift, and go to state 45


State 30

   28 declaracion: declaracion_tipo •

    $default  reduce using rule 28 (declaracion)


State 31

   29 declaracion: declaracion_subprograma •

    $default  reduce using rule 29 (declaracion)


State 32

    9 libreria: "importar" "libreria" • nombre ';'
   10         | "importar" "libreria" • nombre "como" IDENTIFICADOR ";"

    $default  reduce using rule 16 (nombre_ast)

    nombre      go to state 46
    nombre_ast  go to state 37


State 33
